--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jspdf": "^2.5.1",
+    "next": "15.4.4",
+    "pdfmake": "^0.2.20",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.4",
-    "jspdf": "^2.5.1"
+    "react-loading-skeleton": "^3.5.0",
+    "yet-another-react-lightbox": "^3.25.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.4.4",
-    "@eslint/eslintrc": "^3"
+    "eslint-config-next": "15.4.4"
   }
 }
